# textwalker

./: .gitignore  LICENSE  README.md  dodo.py  pattern_exp.py  pattern_parser.py  requirements.txt  setup.cfg  setup.py  text_walker_examples.py
.github/workflows/: python-package.yml  run-tests.yml
docs/: index.html  pattern_parser.html  textwalker.html  utils.html
examples/: text_walker_examples.py
tests/: test_pattern_parser.py
textwalker/: __init__.py  pattern_parser.py  textwalker.py  utils.py
textwalker/tests/: test_pattern_parser.py  test_textwalker.py
