[metadata]
name = textwalker
version = 0.1.0
author = Spandan Bemby
description = Utility to more intuitively parse text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spandanb/textwalker
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
  =textwalker
#packages = find_namespace:
python_requires = >=3.6

[options.packages.find]
where=textwalker

[flake8]
# using 100 to be consistent with black line length (default 88),
# however, black seems to sometimes exceed this limit, hence 100
# flake8 default is 79:
max-line-length = 100
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,
